# raspberry-dataset-metrics

./: .gitignore  README.md  chat.py  chat_al.py  chat_cot.py  lm-evals.sh  pyproject.toml  train.py  train_al.py  train_cot.py
configs/: gemma-4b-it  gemma-4b-pt  llama-3.1-8b.yaml  llama-3.2-3b.yaml  mistral-7b.yaml  phi-4.yaml  qwen-2.5-7b.yaml
lm_eval/: gsm8k-xml.yaml
raspberry_dataset_metrics/: base_model.py  chat.py  constants.py  save.py  train.py  util.py
