[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspberry-dataset-metrics"
version = "0.1.0"
description = "A package for generating metrics for raspberry datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name="Chad Phillips", email="chad@apartmentlines.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "unsloth @ git+https://github.com/unslothai/unsloth.git@fe04c01",
    "datasets>=2.14.0",
    "trl>=0.7.7",
    "transformers>=4.35.0",
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "prompt-toolkit>=3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["raspberry_dataset_metrics"]

[project.scripts]
raspberry-train = "raspberry_dataset_metrics.train:main"
raspberry-chat = "raspberry_dataset_metrics.chat:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pyright",
]
